Closed
Bug 401053
Opened 18 years ago
Closed 18 years ago
Hang initializing scriptable Java applet
Categories
(Core Graveyard :: Plug-ins, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla1.9beta1
People
(Reporter: stephend, Assigned: jst)
References
()
Details
(Keywords: regression)
Attachments
(1 file)
7.49 KB,
patch
|
dveditz
:
review+
dveditz
:
superreview+
damons
:
approvalM9+
damons
:
approval1.9+
|
Details | Diff | Splinter Review |
I hope I filed this in the correct component.
Build ID: Mozilla/5.0 (Macintosh; U; Intel Mac OS X; en-US; rv:1.9a9pre) Gecko/2007102404 Minefield/3.0a9pre
Summary:
Steps to Reproduce:
1. Load http://www.nintendo8.com/game/314/super_mario_brothers_3/
2. Click in the applet's area (middle of the page)
Expected Results:
Applet initializes
Actual Results:
Once you click the applet's area, Minefield "hangs"--stops responding to
mouse/keyboard events--but doesn't enter the "Not Responding" state, according
to the OS.
Updated•18 years ago
|
Flags: blocking1.9?
Reporter | ||
Comment 1•18 years ago
|
||
I should mention that it has to be the first time you've tried to initialize Java in a given browsing session (it matters). If it's not, you don't freeze, the applet just doesn't load.
Assignee | ||
Comment 2•18 years ago
|
||
The key here is that the site in the testcase uses an <object> element instead of an <applet> element to instantiate the applet that's causing problems. I need to move the fix for bug 399524 to a place where it applies for all plugin loading elements, but only when loading a Java plugin...
Assignee: nobody → jst
Assignee | ||
Updated•18 years ago
|
Status: NEW → ASSIGNED
Assignee | ||
Updated•18 years ago
|
Flags: blocking1.9? → blocking1.9+
Target Milestone: --- → mozilla1.9 M10
Assignee | ||
Comment 3•18 years ago
|
||
This basically moves the fix for bug 399406 to a place in the plugin code that we'll hit no matter what markup the page uses for the plugin.
Attachment #286761 -
Flags: superreview?(jonas)
Attachment #286761 -
Flags: review?(jonas)
Comment 4•18 years ago
|
||
Comment on attachment 286761 [details] [diff] [review]
Fix.
r/sr=dveditz
Attachment #286761 -
Flags: superreview?(jonas)
Attachment #286761 -
Flags: superreview+
Attachment #286761 -
Flags: review?(jonas)
Attachment #286761 -
Flags: review+
Assignee | ||
Comment 5•18 years ago
|
||
Comment on attachment 286761 [details] [diff] [review]
Fix.
This would be good to get in for the beta, fixes a recent Java plugin regression on the mac on pages that use <object> tags to load Java applets. Not sure how common that is. The fix is really safe and is really just moving a hunk of code (even though that's not entirely obvious from a quick look at the patch).
Attachment #286761 -
Flags: approvalM9?
Attachment #286761 -
Flags: approval1.9?
Assignee | ||
Updated•18 years ago
|
Target Milestone: mozilla1.9 M10 → mozilla1.9 M9
Comment 6•18 years ago
|
||
Comment on attachment 286761 [details] [diff] [review]
Fix.
a=damons for beta. Let's get this in ASAP. Thanks for knocking this out.
Attachment #286761 -
Flags: approvalM9?
Attachment #286761 -
Flags: approvalM9+
Attachment #286761 -
Flags: approval1.9?
Attachment #286761 -
Flags: approval1.9+
Assignee | ||
Comment 7•18 years ago
|
||
Fixed.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Comment 8•18 years ago
|
||
verified fixed using Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.4; en-US; rv:1.9a9pre) Gecko/2007110105 Minefield/3.0a9pre using the testurl from comment #0. The applet/game works fine
-> Verified
Status: RESOLVED → VERIFIED
Updated•3 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•