Fixing bug 401053. Make sure to initialize LiveConnect any time a Java applet is loaded, no matter what markup was used to load the applet. r+sr=dveditz@cruzio.com, a=dsicore@mozilla.com