dom/src/base/nsGlobalWindow.h
@@ -422,9 +422,7 @@ public:
   NS_DECL_CYCLE_COLLECTION_CLASS_AMBIGUOUS(nsGlobalWindow,
                                            nsIScriptGlobalObject)
 
-#ifdef OJI
   void InitJavaProperties();
-#endif
 
 protected:
   // Object Management
